[package]
name = "trading_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dotenv = "0.15.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13", features = ["json", "rustls", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.52.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4"] }
hex = "0.4"